--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,10 @@
 <h1>Articles#index</h1>
 <<p>A breaking news item</p>
 <p>Some really breaking action</p>
+<ul>
+  <% @articles.each do |article| %>
+    <li>
+       <%= article.title %><br />
+    </li>
+  <% end %>
+</ul>
