--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,7 +4,9 @@
 <ul>
   <% @articles.each do |article| %>
     <li>
-       <%= link_to article.title, article_path(article) %><br />
+       <%= link_to article.title, article_path(article)%><br />
     </li>
   <% end %>
+  <%= link_to 'New Article', new_article_path%>
+    
 </ul>
