--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Articles#index</h1>
-<<p>A breaking news item</p>
+<h1>Articles</h1>
+<p>A breaking news item</p>
 <p>Some really breaking action</p>
 <ul>
   <% @articles.each do |article| %>
@@ -7,6 +7,5 @@
        <%= link_to article.title, article_path(article)%><br />
     </li>
   <% end %>
-  <%= link_to 'New Article', new_article_path%>
-    
 </ul>
+<%= link_to 'New Article', new_article_path%>
