--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,9 +1,9 @@
 <h1>New Article<h1/>
-<%= from with scope: :article, local: true do |form| %>
-    <%= form.label :title%>
-    <%= form.text_field :title%>
-    <%= form.label :content%>
-    <%= form.text_field :content%>
+<%= form_with scope: :article, url: articles_path, local: true do |form| %>
+    <%= form.label :title %>
+    <%= form.text_field :title %>
+    <%= form.label :content %>
+    <%= form.text_field :content %>
     <%= form.submit "Create Article"%>
     
     <%end%>
