finishind set up Devise, adding root in routes.rb, new models files created, rspec file created, sign up functionality working on server

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,7 @@
-<h1>Articles</h1>
+<h1>Articles List</h1>
 <p>A breaking news item</p>
+#<p class="notice"><%= notice %></p>
+#<p class="alert"><%= alert %></p>
 <p>Some really breaking action</p>
 <ul>
   <% @articles.each do |article| %>
