--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,13 +1,14 @@
 <h1>Articles List</h1>
 <p>A breaking news item</p>
-#<p class="notice"><%= notice %></p>
-#<p class="alert"><%= alert %></p>
 <p>Some really breaking action</p>
 <ul>
   <% @articles.each do |article| %>
     <li>
        <%= link_to article.title, article_path(article)%><br />
        <%= link_to 'New Article', new_article_path %>
+       
     </li>
+    
   <% end %>
 </ul>
+<%= link_to 'Sign_up', new_model_registration_path %>
