--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,4 +11,8 @@
     
   <% end %>
 </ul>
-<%= link_to 'Sign_up', new_model_registration_path %>
+
+<p><%= link_to 'Sign_up', new_model_registration_path %></p>
+
+
+<%= link_to 'Log_in', new_model_session_path %>
