--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,12 +6,12 @@
     <li><%= link_to article.title, article_path(article) %></li><br />
     <% end %>
   </ul> 
-    <%= link_to "New Article", new_article_path %>
-    <% if user_signed_in? %>
-    <%= link_to "New Article", new_article_path %> 
-    
-    <% else %>
-    <p><%= link_to 'Sign_up', new_model_registration_path %></p>
-    <%= link_to 'Log_in', new_model_session_path %>
-    <% end %>
+  <% if model_signed_in? %>
+        <h5><%= link_to 'Add New Article', new_article_path %></h5>
+        <%= link_to 'Logout', destroy_model_session_path, method: :delete %>
+        
+        <% else %>
+      <p><%= link_to 'Sign_up', new_model_registration_path %></p>
+      <%= link_to 'Log_in', new_model_session_path %>
+      <% end %>
     
